--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,7 @@ jobs:
           find mkdocswiki/docs -name "*.md" -type f -exec mkdocswiki/docs/files/sedops img {} \;
           find mkdocswiki/docs -name "*.md" -type f -exec mkdocswiki/docs/files/sedops imgclass {} \;
           find mkdocswiki/docs -name "*.md" -type f -exec mkdocswiki/docs/files/sedops pref {} \;
+          find mkdocswiki/docs -name "*.md" -type f -exec mkdocswiki/docs/files/sedops ytfix {} \;
       - name: add the changes to git, commit them, and push
         run: |
           git --work-tree=mkdocswiki/ --git-dir=mkdocswiki/.git/ config user.name github-actions[bot]
