--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,16 +5,8 @@ on:
   push:
     branches:
       - master
-
-# we'll probably switch to using a scheduled job unless we find a way to run
-# this job when a commit/release is made on the indiainvestments/content repo
-
-# we'll run this everyday at midnight on fri, sat, and sun since we get higher
-# traffic at the time
-
-# on:
-#   schedule:
-#     - cron: '0 0 * * 5,6,0'
+  schedule:
+    - cron: '0 0 * * 0'
 
 jobs:
   deploy:
